mudança no html

--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <h1>Olá, Mundo</h1>
-        primeiro uso de Versionamento.
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing el <br> 
+        Obcaecati adipisci recusandae nulla quis quos eum quidem, nostrum <br>
+        rerum veniam aspernatur nobis maxime amet. Molestias<br>
+        ipsam distinctio doloribus dolores, laboriosam deserunt.</p>
     </body>
 </html>
