Botão Inserido no Index

--- a/web/index.html
+++ b/web/index.html
@@ -12,4 +12,5 @@
         rerum veniam aspernatur nobis maxime amet. Molestias<br>
         ipsam distinctio doloribus dolores, laboriosam deserunt.</p>
     </body>
+    <a href="calc.html"><input type="button" value="Calculadora"></a>
 </html>
